@@ -7,21 +7,24 @@ see getCustomDirectoryResultFields for more information
 """
 fields = context.getCustomDirectoryResultFields(directory_id, default_field)
 
+dir = getattr(context.portal_directories, directory_id)
+id_field = getattr(dir, 'id_field', 'id')
+title_field = getattr(dir, 'title_field', 'title')
+
 if not fields:
     if directory_id == 'members':
         fields = [{'id': 'sn', 'title': 'label_last_name', 'sort': 'asc'},
                   {'id': 'givenName', 'title': 'label_first_name'},
                   {'id': 'email', 'title': 'label_email'},
-                  {'id': 'id', 'title': 'label_user_name'},
+                  {'id': id_field, 'title': 'label_user_name'},
                   ]
     elif directory_id == 'groups':
-        fields = [{'id': 'group', 'title': 'label_group', 'sort': 'asc'},]
+        fields = [{'id': id_field, 'title': 'label_group', 'sort': 'asc'},]
     elif directory_id == 'roles':
-        fields = [{'id': 'role', 'title': 'label_roles', 'sort': 'asc'},]
+        fields = [{'id': id_field, 'title': 'label_roles', 'sort': 'asc'},]
 
 if not fields:
-    dir = getattr(context.portal_directories, directory_id)
-    fields = [{'id': dir.id_field, 'title': 'Id'},
-              {'id': dir.title_field, 'title': 'Title', 'sort': 'asc'}]
+    fields = [{'id': id_field, 'title': 'Id'},
+              {'id': title_field, 'title': 'Title', 'sort': 'asc'}]
 
 return fields
